# houdini-trackpad

./: README.md
src/: CMakeLists.txt  gestures.m  trackpad-hook.cc  trackpadhook.cpp
src/multitouch/: multitouch-device.c  multitouch-support.h
src/scripts/: hou-test.py  nodegraphhooks.py
src/trackpad/: trackpad.c  trackpad.h
test/: multitouch-test.py
